# nirvash

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/cargo-nirvash/: Cargo.toml
crates/cargo-nirvash/src/: lib.rs  main.rs
crates/nirvash/: Cargo.toml  README.md
crates/nirvash-backends/: Cargo.toml
crates/nirvash-backends/src/: checker.rs  lib.rs  planning.rs  smt.rs  symbolic.rs
crates/nirvash-backends/tests/: normalized_core.rs  planning.rs
crates/nirvash-check/: Cargo.toml
crates/nirvash-check/src/: lib.rs  planner.rs
crates/nirvash-check/tests/: model_checker_smoke.rs  planner_smoke.rs
crates/nirvash-conformance/: Cargo.toml
crates/nirvash-conformance/src/: lib.rs
crates/nirvash-docgen/: Cargo.toml
crates/nirvash-docgen/src/: lib.rs
crates/nirvash-foundation/: Cargo.toml
crates/nirvash-foundation/src/: lib.rs
crates/nirvash-ir/: Cargo.toml
crates/nirvash-ir/src/: lib.rs
crates/nirvash-ir/tests/: normalized_core.rs
crates/nirvash-lower/: Cargo.toml
crates/nirvash-lower/src/: lib.rs
crates/nirvash-lower/tests/: generated_tests.rs  normalized_core.rs
crates/nirvash-macros/: Cargo.toml
crates/nirvash-macros/src/: codegen.rs  lib.rs
crates/nirvash-macros/tests/: action_doc_summary.rs  code_tests_fixture_priority.rs  code_tests_nondeterministic.rs  code_tests_seed_fallbacks.rs  code_witness_history_names.rs  code_witness_nondeterministic_paths.rs  doc_spec_registration.rs  formal_tests_model_case_config.rs  function_like_proc_macros.rs  relational_state_summary.rs  trybuild.rs
crates/nirvash-macros/tests/fixtures/: attribute_missing_target.rs  attribute_missing_target.stderr  attribute_wrong_type.rs  attribute_wrong_type.stderr  case_scoped_constraints_duplicate_labels.rs  case_scoped_constraints_duplicate_labels.stderr  case_scoped_constraints_invalid_option.rs  case_scoped_constraints_invalid_option.stderr  case_scoped_constraints_ok.rs  code_tests_concurrency_marker_ok.rs  code_tests_custom_fixture_nonserializable_ok.rs  code_tests_export_alias_ok.rs  code_tests_import_block_ok.rs  code_tests_import_first_ok.rs  code_tests_import_nested_module_ok.rs  code_tests_import_profiles_ok.rs  code_tests_kani_engine_removed.rs  code_tests_kani_engine_removed.stderr  code_tests_kani_harness_ok.rs  code_tests_kani_installer_removed.stderr  code_tests_legacy_action.rs  code_tests_legacy_action.stderr  code_tests_legacy_args.rs  code_tests_legacy_args.stderr  code_tests_legacy_context.rs  code_tests_legacy_context.stderr  code_tests_legacy_driver.rs  code_tests_legacy_driver.stderr  code_tests_legacy_fresh.rs  code_tests_legacy_fresh.stderr  code_tests_legacy_harness.rs  code_tests_legacy_harness.stderr  code_tests_legacy_probe.rs  code_tests_legacy_probe.stderr  code_tests_low_level_nested_installer_ok.rs  code_tests_missing_concurrency_marker.rs  code_tests_missing_concurrency_marker.stderr  code_tests_missing_oracle.rs  code_tests_missing_oracle.stderr  code_tests_missing_projection.rs  (+82 more)
crates/nirvash-proof/: Cargo.toml
crates/nirvash-proof/src/: lib.rs
crates/nirvash/src/: action_vocabulary.rs  doc_graph.rs  dsl_macros.rs  fairness.rs  lib.rs  ltl.rs  model.rs  predicate.rs  registry.rs  relation.rs  trace.rs  transition_doc.rs  update_helpers.rs
examples/deadlock-formal-model/: Cargo.toml  README.md
examples/deadlock-formal-model/src/: lib.rs  main.rs  model.rs
examples/docker-compose-model/: Cargo.toml  README.md  build.rs
examples/docker-compose-model/src/: lib.rs  main.rs  model.rs  planning.rs  runtime.rs  tests.rs
examples/lock-manager-model/: Cargo.toml  README.md
examples/lock-manager-model/src/: lib.rs  main.rs  model.rs  planning.rs  runtime.rs  tests.rs
examples/lock-manager-model/tests/: generated.rs
