[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"
authors = ["Yieldspace contributors"]
repository = "https://github.com/yieldspace/nirvash"
homepage = "https://github.com/yieldspace/nirvash"

[workspace.dependencies]
anyhow = "1.0.102"
clap = "4.5.60"
inventory = "0.3.21"
loom = "0.7.2"
proc-macro2 = { version = "1.0.103", features = ["span-locations"] }
proptest = "1.9.0"
quote = "1.0.42"
serde = "1.0.228"
serde_json = "1.0.149"
sha2 = "0.10.9"
shuttle = "0.8.1"
syn = "2.0.117"
tempfile = "3.26.0"
tokio = "1.49.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
trybuild = "1.0.114"
z3 = "0.19.13"

cargo-nirvash = { path = "crates/cargo-nirvash", version = "0.1.0" }
nirvash = { path = "crates/nirvash", version = "0.1.0" }
nirvash-backends = { path = "crates/nirvash-backends", version = "0.1.0" }
nirvash-check = { path = "crates/nirvash-check", version = "0.1.0" }
nirvash-conformance = { path = "crates/nirvash-conformance", version = "0.1.0" }
nirvash-docgen = { path = "crates/nirvash-docgen", version = "0.1.0" }
nirvash-foundation = { path = "crates/nirvash-foundation", version = "0.1.0" }
nirvash-ir = { path = "crates/nirvash-ir", version = "0.1.0" }
nirvash-lower = { path = "crates/nirvash-lower", version = "0.1.0" }
nirvash-macros = { path = "crates/nirvash-macros", version = "0.1.0" }
nirvash-proof = { path = "crates/nirvash-proof", version = "0.1.0" }
