[package]
name = "cargo-nirvash"
description = "Cargo subcommand for generated replay and harness workflows in nirvash."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cargo-nirvash"

[lib]
path = "src/lib.rs"

[[bin]]
name = "cargo-nirvash"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
