[package]
name = "nirvash-docgen"
description = "Rustdoc-oriented doc graph and Mermaid generation utilities for nirvash."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nirvash-docgen"

[lib]
path = "src/lib.rs"

[dependencies]
nirvash = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }

[dev-dependencies]
tempfile = { workspace = true }
