[package]
name = "nirvash-foundation"
description = "Shared finite-domain and symbolic-encoding traits for nirvash."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nirvash-foundation"

[lib]
path = "src/lib.rs"

[dependencies]
inventory = { workspace = true }
