[package]
name = "nirvash-lower"
description = "Lowering boundary and checker-facing shared API for nirvash."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nirvash-lower"

[lib]
path = "src/lib.rs"

[dependencies]
nirvash = { workspace = true }
nirvash-foundation = { workspace = true }
nirvash-ir = { workspace = true }
serde = { workspace = true, features = ["derive"] }
