[package]
name = "nirvash-macros"
description = "Proc macros for derives, subsystem specs, and generated test surfaces in nirvash."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nirvash-macros"

[lib]
proc-macro = true

[features]
default = []
loom = []

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }

[dev-dependencies]
nirvash-conformance = { workspace = true }
nirvash = { workspace = true }
nirvash-check = { workspace = true }
nirvash-lower = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
trybuild = { workspace = true }
