[package]
name = "nirvash-proof"
description = "Proof bundle export and certificate-facing types for nirvash."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nirvash-proof"

[lib]
path = "src/lib.rs"

[dependencies]
nirvash-ir = { workspace = true }
nirvash-lower = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
