[package]
name = "nirvash"
description = "Authoring facade and DSL surface for executable transition-system specifications."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nirvash"
readme = "README.md"

[lib]
path = "src/lib.rs"

[features]
default = []
checker-tests = []

[dependencies]
inventory = { workspace = true }
nirvash-foundation = { workspace = true }
nirvash-macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
