[package]
name = "deadlock-formal-model"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]
resolver = "3"

[dependencies]
nirvash = { path = "../../crates/nirvash" }
nirvash-check = { path = "../../crates/nirvash-check" }
nirvash-lower = { path = "../../crates/nirvash-lower" }
nirvash-macros = { path = "../../crates/nirvash-macros" }
